crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__collapse_groups__collapse_groups_structural_selectors-5.snap
---
source: crates/oxvg_optimiser/src/jobs/collapse_groups.rs
expression: "test_config(r#\"{ \"collapseGroups\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- Should preserve the parent of an anchor that's matched by its position -->\n    <style>\n        g:first-child > path { fill: red }\n    </style>\n    <g>\n        <g>\n            <path d=\"...\"/>\n        </g>\n    </g>\n    <g>\n        <g>\n            <circle r=\"1\"/>\n        </g>\n    </g>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- Should preserve the parent of an anchor that's matched by its position -->
    <style>
        g:first-child>path{fill:red}
    </style>
    <g>
        <g>
            <path d=""/>
        </g>
    </g>
    <circle r="1"/>
</svg>
