crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__collapse_groups__collapse_groups_structural_selectors-7.snap
---
source: crates/oxvg_optimiser/src/jobs/collapse_groups.rs
expression: "test_config(r#\"{ \"collapseGroups\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- Should only preserve groups that would change the index of a sibling -->\n    <style>\n        path:nth-child(3) { fill: red }\n        rect:last-child { fill: red }\n    </style>\n    <g>\n        <circle r=\"1\"/>\n    </g>\n    <path d=\"...\"/>\n    <g>\n        <circle r=\"1\"/>\n        <circle r=\"1\"/>\n    </g>\n    <g>\n        <rect width=\"1\"/>\n        <rect width=\"1\"/>\n    </g>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- Should only preserve groups that would change the index of a sibling -->
    <style>
        path:nth-child(3){fill:red}rect:last-child{fill:red}
    </style>
    <circle r="1"/>
    <path d=""/>
    <circle r="1"/>
    <circle r="1"/>
    <rect width="1"/>
    <rect width="1"/>
</svg>
