crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__collapse_groups__collapse_groups_structural_selectors-9.snap
---
source: crates/oxvg_optimiser/src/jobs/collapse_groups.rs
expression: "test_config(r#\"{ \"collapseGroups\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- Should preserve attributes and position relied on by negations -->\n    <style>\n        path:not(:nth-child(2)) { fill: red }\n        svg circle:not([fill]) { stroke: red }\n    </style>\n    <g>\n        <path d=\"...\"/>\n    </g>\n    <g fill=\"blue\">\n        <circle r=\"1\"/>\n    </g>\n    <g fill=\"blue\">\n        <rect width=\"1\"/>\n    </g>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- Should preserve attributes and position relied on by negations -->
    <style>
        path:not(:nth-child(2)){fill:red}svg circle:not([fill]){stroke:red}
    </style>
    <g>
        <path d=""/>
    </g>
    <g fill="#00f">
        <circle r="1"/>
    </g>
    <rect width="1" fill="#00f"/>
</svg>
